[tool.poetry]
name = "run"
version = "0.1.0"
description = ""
authors = ["MaximGit1 <allq137x@gmail.com>"]
readme = "README.md"
packages = [{include = "run", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
faststream = {extras = ["rabbit"], version = "^0.5.34"}
redis = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"